# stl-meshing

./: .gitignore  README.md  pyproject.toml
examples/: stl_mesh_test.py  stl_mesh_test.stl  stl_mesh_test_info.txt
stlmeshing/: mesh3d_plotter.py  points_inside.py  read_stl.py  stl.py
